# Algo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
1_lsn/hw/: 1_authomata.cc  2_symdiff.cc  3_intersection.cc  5_permutation.cc  CMakeLists.txt
2021/cw1/: A.cc  B.cc
2021/hw1/: 2_symdiff.cc  3_intersection.cc  4_sequence.cc  5_permutation.cc  CMakeLists.txt  warns.cmake
2021/kr1/: 1_battle.cc  2_subarrays.cc  3_positivism.cc  4_find_num.cc  CMakeLists.txt
2022/cw1/1T/: 1_two_heaps.cc  CMakeLists.txt  t1.txt  t2.txt  t3.txt  t5.txt  t6.txt
2022/cw1/2T/: 2_exact_array_sum.cc  CMakeLists.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt
2022/cw1/3T/: 3_string.cc  CMakeLists.txt
2022/hw1/: 2_symdiff.cc
2022/hw1/1T/: 1_automat.cc  CMakeLists.txt
2022/hw1/2T/: 2_symdiff.cc  CMakeLists.txt  t1.txt  t2.txt  t3.txt  t4.txt
2022/hw1/3T/: 3_subarraysSums.cc  CMakeLists.txt
2022/hw1/4T/: 4_perm.cc
2022/hw1/5T/: 5_subsets.cc  CMakeLists.txt
2022/hw1/6T/: 6_preproc.cc  CMakeLists.txt  t1.txt  t2.txt  t3.txt
2022/hw2/4T/: CMakeLists.txt
2022/hw2/5T/: 5_subsets.cc
2022/hw2/6T/: 6_preproc.cc  task.txt
2022/hw3/7T/: 7_freq_count.cc  CMakeLists.txt
2022/hw3/8T/: 8_multi_sort.cc  CMakeLists.txt  t1.txt  t2.txt
2022/hw3/9T/: 9_matrix_sort.cc  CMakeLists.txt  t1.txt  t2.txt
2022/hw4/: CMakeLists.txt
2022/hw4/10T/: 10_mobile_network.cc  CMakeLists.txt  t1.txt  t2.txt
2_lsn/: A.cc  B.cc
cmake/: subdirlist.cmake
cw1/: A.cc
hw1/: 4_sequence.cc  CMakeLists.txt
kr1/: 1_battle.cc  3_positivism.cc
